updated .item2 css height to fix downloader cut off issue

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -41,7 +41,7 @@
 
 .item2 {
   display: grid;
-  height: 80vh;
+  height: 60vh;
   margin: 0 auto;
   width: 50vw;
   grid-column-start: 2;
